2014-03-23  Jakub Jelinek  <jakub@redhat.com>

	PR ipa/65521
	* ipa-icf.c (sem_item::update_hash_by_addr_refs): Hash
	ultimate_alias_target ()->order ints instead of
	ultimate_alias_target () pointers.

2015-03-23  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/65518
	* tree-vect-stmts.c (vectorizable_load): Reject single-element
	interleaving cases we generate absymal code for.

2015-03-23  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/65494
	* tree-vect-slp.c (vect_build_slp_tree): Do not (re-)allocate
	matches here.
	(vect_analyze_slp_instance): But do that here, always and once.

2015-03-23  Kyrylo Tkachov  <kyrylo.tkachov@arm.com>

	* expmed.c (synth_mult): Fix comment about multiplying by T-1 and
	adding T or multiplying by T+1 and subracting T.

2015-03-22  Jeff Law  <law@redhat.com>

	PR rtl-optimization/64317
	* Makefile.in (OBJS): Add gcse-common.c
	* gcse.c: Include gcse-common.h
	(struct modify_pair_s): Move structure definition to gcse-common.h
	(compute_transp): Move function to gcse-common.c.
	(canon_list_insert): Similarly.
	(record_last_mem_set_info): Break out some code and put it into
	gcse-common.c.  Call into the new common code.
	(compute_local_properties): Pass additional arguments to compute_transp.
	* postreload-gcse.c: Include gcse-common.h and df.h
	(modify_mem_list_set, blocks_with_calls): New variables.
	(modify_mem_list, canon_modify_mem_list, transp): Likewise.
	(get_bb_avail_insn): Pass in the expression index too.
	(alloc_mem): Allocate memory for the new bitmaps and lists.
	(free_mem): Free memory for the new bitmaps and lists.
	(insert_expr_in_table): Record a bitmap index for each entry we
	add to the table.
	(record_last_mem_set_info): Call into common code in gcse-common.c.
	(get_bb_avail_insn): If no available insn was found in the requested
	BB.  If BB has a single predecessor, see if the expression is
	transparent in BB and available in that single predecessor.